# py-flask-bootcamp-week-01

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  config.py  docker-compose.yml  models.py  pyproject.toml  requirement.txt  run.py
.github/workflows/: flask_CI.yml
app/: __init__.py
app/admin/: admin_routes.py
app/admin/models/: __init__.py  department.py  doctor_department.py
app/admin/repositories/: appointment_repository.py  department_repository.py  doctor_department_repository.py
app/admin/schemas/: assign_doctor_schema.py  department_schema.py  onboard_doctor_schema.py
app/admin/services/: admin_service.py  appointment_service.py  department_service.py
app/auth/: auth_routes.py
app/auth/services/: auth_service.py
app/common/models/: user.py
app/common/repositories/: __init__.py  user_repository.py
app/common/schemas/: login_schema.py  user_schema.py
app/common/utils/: JWT_utils.py  decorator.py
app/config/: config.py
app/doctor/availability/: availibility_routes.py
app/doctor/availability/models/: __init__.py  availability.py
app/doctor/availability/repositories/: availability_repository.py
app/doctor/availability/schemas/: availability_schema.py
app/doctor/availability/services/: availability_service.py
app/member/book_appointment/: appointment_routes.py
app/member/book_appointment/models/: appointment.py
app/member/book_appointment/repositories/: appointment_repo.py
app/member/book_appointment/schemas/: appointment_schema.py
app/member/book_appointment/services/: appointment_service.py
app/models/: __init__.py  doctor_department.py
app/reimbursement/: reimbursement_routes.py
app/reimbursement/models/: __init__.py  reimbursement.py
app/reimbursement/repositories/: reimbursement_repository.py
app/reimbursement/schemas/: reimbursement_schemas.py
app/reimbursement/services/: reimbursement_services.py
app/repositories/: department_repository.py  user_repository.py
app/routes/: admin_routes.py  auth_routes.py
app/services/: admin_service.py  auth_service.py  department_service.py
routes/: admin_routes.py  auth_routes.py
utils/: JWT_utils.py
