[tool.poetry]
name = "Maven_Clinic"
version = "0.1.0"
description = "A Flask App with JWT-authentication for Maven Clinic"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
bcrypt ="4.3.0"
blinker="1.9.0"
click="8.2.1"
Flask="3.1.1"
Flask-JWT-Extended="4.7.1"
Flask-SQLAlchemy="3.1.1"
greenlet="3.2.3"
itsdangerous="2.2.0"
Jinja2="3.1.6"
MarkupSafe="3.0.2"
psycopg2-binary="2.9.10"
PyJWT="2.10.1"
python-dotenv="1.1.1"
SQLAlchemy="2.0.42"
typing_extensions="4.14.1"
Werkzeug="3.1.3"
marshmallow = "^4.0.0"
marshmallow-sqlalchemy = "^1.4.2"
flask-migrate = "^4.1.0"
redis = "^6.4.0"
marshmallow-enum = "^1.5.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
mypy = "^1.17.1"

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
  \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
skip = ["migrations", ".venv", "build", "dist"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = ["migrations", ".venv", "build", "dist"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = false
exclude = 'migrations|.venv|build|dist'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
